# jonathan-dumb-flask-demo

./: .gitignore  Dockerfile  Dockerfile.nginx  NGINX-PROXY-README.md  README.md  app.py  build.sh  k8s-local-deployment.yaml  k8s-pod-example.yaml  local_run.sh  nginx.conf.template  pyproject.toml  run_tests.sh  setup.sh  test_app.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
scripts/: build.sh  lint.sh  run_tests.sh  setup.sh
