[project]
name = "jonathan-dumb-flask-demo"
version = "1.0.0"
description = "A simple Flask demo application"
requires-python = ">=3.9"
dependencies = [
    "Flask==3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "diff-cover>=9.0.0",
]

[tool.coverage.run]
source = ["app"]
omit = ["test_*.py", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
